@@ -240,6 +240,10 @@
 	Fixed absolute paths not being completed when 'autocd' option is enabled.
 	Thanks to Taras Halturin (a.k.a. halturin).
 
+	Fixed individual error messages when 'syscalls' is on lacking system error
+	string which is present when errors are aggregated at the end of an
+	operation.  Thanks to an anonymous at Vifm Q2A site.
+
 0.13-beta to 0.13 (2023-04-04)
 
 	Made "withicase" and "withrcase" affect how files are sorted before
